<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/touch_selector_dark">
    <TextView
        android:id="@+id/widget_stock"
        style="@style/StockSymbolTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        tools:text="GOOG"
        android:textColor="#fff"
        android:contentDescription="@string/symbol"
        />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        >
        <TextView
            android:id="@+id/widget_bid_price"
            style="@style/BidPriceTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10sp"
            tools:text="1000.00"
            android:textColor="#fff"
            android:contentDescription="@string/bid_price"
            />
        <TextView
            android:id="@+id/widget_change"
            android:background="@drawable/percent_change_pill"
            style="@style/PercentChangeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            tools:text="100%"
            android:textColor="#fff"
            android:contentDescription="@string/percent_change"
            />
    </LinearLayout>
</LinearLayout>